Fix crash in View::slotNext/PrevUnreadArticle() Combined View: do slotNext/PrevUnreadFeed() in slotNext/PrevUnreadArticle(), as selecting the next article does not make much sense... (at least not now)

BUG: 121999

svn path=/branches/KDE/3.5/kdepim/; revision=509576